force-app/main/default/objects/ImLogEvent__e/fields/LogEventName__c.field-meta.xml
<CustomField>
    <fullName>LogEventName__c</fullName>
    <label>Log Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>