force-app/main/default/objects/ImLogEvent__e/fields/Mantissa__c.field-meta.xml
<CustomField>
    <fullName>Mantissa__c</fullName>
    <label>Mantissa</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>